change replications functionality added

--- a/version1/replications.css
+++ b/version1/replications.css
@@ -34,3 +34,12 @@
 	text-align: center;
 	
 }
+
+#submit{
+	padding:5px 15px; 
+    border: 2px solid #5D7B85;
+    cursor:pointer;
+    -webkit-border-radius: 5px;
+    border-radius: 25px; 
+}
+
