Fixed up side nav

--- a/styles/assist_summary.css
+++ b/styles/assist_summary.css
@@ -33,14 +33,14 @@ h1{
 }
 
 #operator2, #operator1{
-	padding:5px 15px; 
-	width:fit-content; 
-	width:-webkit-fit-content; 
+	padding:5px 15px;
+	width:fit-content;
+	width:-webkit-fit-content;
 	width:-moz-fit-content;
 	border: 3px solid #5D7B85;
 	cursor:pointer;
 	-webkit-border-radius: 5px;
-	border-radius: 25px; 
+	border-radius: 25px;
 	display: inline-block;
 	width: 450px;
 	margin: 20px;
@@ -48,13 +48,13 @@ h1{
 	background-color: rgba(255, 255, 255, 0.6);
 }
 
-#summary, button
+#summaryButton, button
 {
-	padding:5px 15px; 
+	padding:5px 15px;
     border: 2px solid #5D7B85;
     cursor:pointer;
     -webkit-border-radius: 5px;
-    border-radius: 25px; 
+    border-radius: 25px;
 }
 
 #back_button
@@ -74,9 +74,9 @@ h1{
 }
 button[type=submit] {
 
-	padding:5px 15px; 
+	padding:5px 15px;
 	border: 2px solid #5D7B85;
 	cursor:pointer;
 	-webkit-border-radius: 5px;
-	border-radius: 25px; 
+	border-radius: 25px;
 }*/
