--- a/graph_text.css
+++ b/graph_text.css
@@ -8,7 +8,8 @@
  	-webkit-border-radius: 5px;
  	border-radius: 25px;
  	display: inline-block;
- 	width: 1200px;
+ 	min-width: 800px;
+ 	/*width: 1200px;*/
  	/*margin: 0 auto;*/
  	margin: 20px;
  	text-align: left;
